--- a/typst.toml
+++ b/typst.toml
@@ -1,6 +1,6 @@
 [package]
 name = "modern-szu-thesis"
-version = "0.1.1"
+version = "0.3.0"
 entrypoint = "lib.typ"
 authors = ["yjdyamv"]
 license = "MIT"
@@ -9,6 +9,7 @@ keywords = ["Shenzhen University", "thesis"]
 categories = ["thesis"]
 exclude = ["imgs"]
 repository = "https://gitee.com/yjdyamv/modern-szu-thesis"
+compiler = "0.13.0"
 
 [template]
 path = "template"
