add:研究生部分，并将模板分拆成两个文件，enum的numbering。

--- a/typst.toml
+++ b/typst.toml
@@ -13,5 +13,5 @@ compiler = "0.13.0"
 
 [template]
 path = "template"
-entrypoint = "thesis.typ"
+entrypoint = " bachelor-thesis.typ"
 thumbnail = "thumbnail.png"
